base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-hello-world
  labels:
    app: http-hello-world
spec:
  replicas: 2
  selector:
    matchLabels:
      app: http-hello-world
  template:
    metadata:
      labels:
        app: http-hello-world
    spec:
      containers:
      - name: http-hello-world
        image: fabienfleureau/http-hello-world:latest
        ports:
        - containerPort: 8000
          name: http
          protocol: TCP
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"
        livenessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 5
          periodSeconds: 5
