base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-hello-world
  labels:
    app: http-hello-world
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: http-hello-world
